--- a/2-node/package.json
+++ b/2-node/package.json
@@ -9,6 +9,7 @@
   "author": "Lerry Gabriel Klitzke",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3"
   },
