--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
